--- a/aqct-aplication/src/pages/pregunta/pregunta.html
+++ b/aqct-aplication/src/pages/pregunta/pregunta.html
@@ -9,25 +9,27 @@
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
-      <ion-title>Preguntas y respuestas</ion-title>
+      <ion-title>Preguntas</ion-title>      
     </ion-navbar>
   </ion-header>
 
 
 <ion-content padding>
 
-  <ion-label>Preguntas Aprobadas</ion-label>  
+  <ion-label>Preguntas Aprobadas</ion-label> 
+  
+  <ion-list inset>
+      <button ion-item *ngFor="let pregunta of arrayPreguntaAprobada;" (click)="preguntaSelected(pregunta)">
+        {{ pregunta.pregunta }}
+      </button> 
+  </ion-list>
 
-  <ion-item *ngFor="let pregunta of arrayPreguntaAprobada;">
-    {{pregunta.pregunta}}
-  </ion-item>
+  <ion-label>Preguntas en avaluacion</ion-label>  
 
-  <ion-label>Preguntas NO Aprobadas</ion-label>  
-
-  <ion-item *ngFor="let pregunta of arrayPreguntaNoAprobada;">
-    {{pregunta.pregunta}}
-  </ion-item>
-
-
+  <ion-list inset>
+      <button ion-item *ngFor="let pregunta of arrayPreguntaNoAprobada;" (click)="preguntaSelected(pregunta)">
+        {{ pregunta.pregunta }}
+      </button> 
+  </ion-list>
 
 </ion-content>
