--- a/aqct-aplication/src/pages/respuesta/respuesta.html
+++ b/aqct-aplication/src/pages/respuesta/respuesta.html
@@ -7,12 +7,32 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>respuesta</ion-title>
+    <ion-title>Estado Pregunta</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+
+  <ion-card>
+    <ion-card-header>
+      {{pregunta.pregunta}}
+    </ion-card-header>
+    <ion-card-content>
+      {{pregunta.descripcion}}
+    </ion-card-content>    
+  </ion-card>
+
+  <ion-label *ngIf="mensajePregunta">
+     {{ mensajePregunta }}
+  </ion-label>
+
+  <ion-list inset *ngIf = "pregunta.preguntas">
+    <ion-item *ngFor="let respuesta of pregunta.respuestas;">
+      {{ respuesta.respuesta }}
+    </ion-item>
+  </ion-list>
 
 </ion-content>
