aqct-aplication mockups

--- a/aqct-aplication/src/pages/pregunta/pregunta.html
+++ b/aqct-aplication/src/pages/pregunta/pregunta.html
@@ -20,19 +20,33 @@
   </strong>
   
   <ion-list inset>
-      <button ion-item *ngFor="let pregunta of arrayPreguntaAprobada;" (click)="preguntaSelected(pregunta)">
-        {{ pregunta.pregunta }}
-      </button> 
+    <button ion-item *ngFor="let pregunta of arrayPreguntaAprobada;" (click)="preguntaSelected(pregunta)">
+      {{ pregunta.pregunta }}
+    </button>
+    
+    <ion-card *ngIf="!hasPreguntasAprobada">
+      <ion-card-content>
+        No se han encontrado preguntas aprobadas
+      </ion-card-content>
+    </ion-card>
+
   </ion-list>
 
   <strong>
-    <ion-label>Preguntas en avaluacion</ion-label>  
+    <ion-label>Preguntas en evaluación</ion-label>  
   </strong>
   
   <ion-list inset>
       <button ion-item *ngFor="let pregunta of arrayPreguntaNoAprobada;" (click)="preguntaSelected(pregunta)">
         {{ pregunta.pregunta }}
-      </button> 
+      </button>
+      
+      <ion-card *ngIf="!hasPreguntasNoAprobada">
+        <ion-card-content>
+          No se han encontrado preguntas para evaluar
+        </ion-card-content>
+      </ion-card>
+  
   </ion-list>
 
 </ion-content>
